# CLionProjects

./: .gitignore
ASD/CalcoloCombinatorio/: CMakeLists.txt  main.c
ASD/Lab_01_01/: CMakeLists.txt  main.c
ASD/Lab_01_03/: main.c
ASD/Lab_01_04/: CMakeLists.txt  corse.txt  main.c
ASD/Lab_02_01/: CMakeLists.txt  main.c
ASD/PreparazioneEsame/: CMakeLists.txt  main.c
ASD/PreparazioneEsame/BST/: BST.txt  Bst.c  Bst.h
ASD/PreparazioneEsame/Code/: Heap.c  Heap.h  Heap.txt  PQ.c  PQ.h  prova_PQ.txt
ASD/PreparazioneEsame/Grafi/: Grafo1_esame.txt  Grafo2_esame.txt  Graph.c  Graph.h  ST.c  ST.h
ASD/PreparazioneEsame/Item/: Item.c  Item.h
ASD/PreparazioneEsame/Liste/: List.c  List.h  List.txt
ASD/PreparazioneEsame/Ricorsione/: AlgoritmiOrdinamento.c  AlgoritmiOrdinamento.h  CalcoloCombinatorio.c  CalcoloCombinatorio.h
Esame_Es_4/: CMakeLists.txt  main.c
Esame_Es_5/: CMakeLists.txt  main.c
Esame_Es_6/: main.c
Lab_01_05/: main.c
Lab_01_06/: CMakeLists.txt  main.c
Lab_01_Ex/: Guide.txt  main.c
Lab_02_03/: CMakeLists.txt  main.c
Lab_02_04/: CMakeLists.txt  main.c
Lab_03_01/: testo.txt
Lab_03_03/: main.c
Lab_04_01/: CMakeLists.txt  main.c
Lab_04_02/: CMakeLists.txt  main.c
Lab_04_03/: main.c
Lab_05_01/: main.c
Lab_05_02/: CMakeLists.txt  main.c  ricodificato.txt
Lab_06_01/: CMakeLists.txt
Lab_07_01/: CMakeLists.txt  main.c
Lab_07_02/: main.c
Lab_08_01/: CMakeLists.txt  main.c
Online_connectivity/: pairs.txt
OpenGL/: CMakeLists.txt  main.c
Projects/: README.md
esercizi_Esame/: CMakeLists.txt  main.c
lists/: CMakeLists.txt
(+94 files in other folders)
